# tuat_tea_house

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/: count.py  detect.py  detectobject.py  main.py  showbb.py  showvideo.py
src/tuat_tea_house/: __init__.py
