[project]
name = "tuat-tea-house"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hokkey621", email = "ibukiz621@yahoo.co.jp" }
]
dependencies = [
    "pip>=24.0",
    "opencv-python>=4.9.0.80",
    "ultralytics>=8.2.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tuat_tea_house"]
